--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,7 +4,7 @@ metadata:
 components:
   - container:
       args: ['tail', '-f', '/dev/null']
-      image: 'towerpah.shadowman.dev/devee:latest'
+      image: 'registry.redhat.io/ansible-automation-platform-24/ee-supported-rhel9:latest'
       memoryRequest: 256M
       memoryLimit: 6Gi
       cpuRequest: 250m
